major gauntlet refactor
